--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,8 @@ description = ""
 authors = [""]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "3.9"
+numpy = "^1.21.4"
 
 [tool.poetry.dev-dependencies]
 
