--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,10 @@ authors = [""]
 [tool.poetry.dependencies]
 python = "3.9"
 numpy = "^1.21.4"
+pytest = "^6.2.5"
 
 [tool.poetry.dev-dependencies]
+pytest = "^6.2.5"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
