--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = [""]
 python = "3.9"
 numpy = "^1.21.4"
 pytest = "^6.2.5"
+pre-commit = "^2.16.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
